[gd_scene load_steps=6 format=3 uid="uid://bo0o5t264vd4i"]

[ext_resource type="Texture2D" uid="uid://bp26qbcvc3p5l" path="res://Assets/Asteroid_01.png" id="1_codkr"]
[ext_resource type="Script" path="res://Scripts/asteroid.gd" id="1_ysoqq"]
[ext_resource type="PackedScene" uid="uid://cw68mwca2kvuf" path="res://Scenes/screen_bounds_movement.tscn" id="3_1shye"]
[ext_resource type="PackedScene" uid="uid://dqkomyhq2lekn" path="res://Scenes/explosion_particles.tscn" id="4_mmvh4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ko2m5"]
radius = 64.0

[node name="Asteroid" type="Area2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_ysoqq")
speed = 100

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_codkr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ko2m5")

[node name="ScreenBoundsMovement" parent="." node_paths=PackedStringArray("node") instance=ExtResource("3_1shye")]
node = NodePath("..")

[node name="ExplosionParticles" parent="." instance=ExtResource("4_mmvh4")]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
